layout bug fixes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,4 +14,5 @@ body{
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
     outline: none;
+    transition: all 80ms linear;
   }
